[Product][API][Pagination] Finalize pagination for the API layer
